Fixed footer covering bottom content

--- a/src/app/list/list.component.css
+++ b/src/app/list/list.component.css
@@ -41,3 +41,7 @@ footer {
     bottom: 0px;
     width: 100%;
 }
+
+#content {
+    margin-bottom: 100px;
+}
